<resources>
    <string name="app_name">Battery Manager</string>
    <string name="welcome">Welcome</string>
    <string name="check_your_battery_state">Check your battery state</string>
    <string name="voltage">Voltage</string>
    <string name="technology">Technology</string>
    <string name="plugged_Status">Plugged Status</string>
    <string name="temperature">Temperature</string>
    <string name="app_usage">App Usage</string>
</resources>